# file-handle-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: config.yaml
.github/workflows/: test.yaml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/intermediate-users/: api-behavior.md
docs/src/maintainers/: development.md
docs/src/new-users/: feature-flags.md  quick-start.md
examples/: smoke_test.rs
rfcs/: README.md
rfcs/done/: 001-file-handle-tier1-advancement.md  002-terminal-availability-probe.md
src/: error.rs  file_handle.rs  lib.rs
src/file_handle/: linux_unix.rs  macos.rs  tests.rs  windows.rs
tests/: integration_test.rs
tests/integration_test/: open.rs  show.rs  terminal.rs  trash.rs
